k8s/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
  namespace: k8s-program
  labels:
    app: posts-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: kamronbekrustamov/posts:1.0.0
          ports:
            - containerPort: 8080
