k8s/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
  namespace: k8s-program
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
