k8s/posts-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-svc
  namespace: k8s-program
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - nodePort: 31001
      port: 8081
      targetPort: 8080
