k8s/posts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-svc
  namespace: k8s-program
spec:
  selector:
    app: posts
  ports:
    - port: 8080
      targetPort: 8080
