k8s/users-clusterip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-clusterip-svc
  namespace: k8s-program
spec:
  selector:
    app: users
  ports:
    - port: 8080
      targetPort: 8080
