k8s/users-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-nodeport-svc
  namespace: k8s-program
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - nodePort: 31000
      port: 8080
      targetPort: 8080
