k8s/users-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: k8s-program
spec:
  selector:
    app: users
  ports:
    - port: 8080
      targetPort: 8080
